Edit logic implementation

--- a/src/app/components/editor-dashboard/article-list/article-list.component.html
+++ b/src/app/components/editor-dashboard/article-list/article-list.component.html
@@ -7,9 +7,11 @@
     <p>📭 No articles available.</p>
   </div>
   <div *ngIf="articles.length > 0">
-    <app-article-row
-      *ngFor="let article of articles"
-      [article]="article">
-    </app-article-row>
+   <app-article-row
+  *ngFor="let article of articles"
+  [article]="article"
+  (save)="onSaveArticle($event)">
+</app-article-row>
+
   </div>
 </div>
