Reports and analytics commit

--- a/src/app/components/editor-dashboard/editor-dashboard.component.html
+++ b/src/app/components/editor-dashboard/editor-dashboard.component.html
@@ -51,7 +51,7 @@
     </ng-container>
 
     <ng-container *ngIf="selectedSection === 'reports'">
-      <div class="coming-soon">📊 Reports & Analytics - Coming Soon</div>
+      <app-reports></app-reports>
     </ng-container>
   </div>
 </div>
