--- a/src/app/components/editor-dashboard/editor-dashboard.component.html
+++ b/src/app/components/editor-dashboard/editor-dashboard.component.html
@@ -48,9 +48,28 @@
       <div class="coming-soon">🤖 AI Insights - Coming Soon</div>
     </ng-container>
 
-    <ng-container *ngIf="selectedSection === 'category'">
-      <div class="coming-soon">📂 Category Management - Coming Soon</div>
-    </ng-container>
+ <div *ngIf="selectedSection === 'category'">
+  <div class="category-boxes">
+    <button
+      *ngFor="let cat of categories"
+      (click)="onSelectCategory(cat.value)"
+      [class.active]="selectedCategory === cat.value"
+      class="category-btn">
+      {{ cat.label }}
+    </button>
+  </div>
+  <div *ngIf="selectedCategory">
+    <div *ngFor="let news of selectedCategoryNews">
+      <h4>{{ news.Title }}</h4>
+      <p>{{ news.Description }}</p>
+    </div>
+    <div *ngIf="selectedCategoryNews.length === 0">
+      No news found for selected category.
+    </div>
+  </div>
+</div>
+
+
 
     <ng-container *ngIf="selectedSection === 'reports'">
       <app-reports></app-reports>
