--- a/src/app/components/editor-dashboard/ad-submission-list/ad-submission-list.component.scss
+++ b/src/app/components/editor-dashboard/ad-submission-list/ad-submission-list.component.scss
@@ -199,5 +199,11 @@
       background: #e4e4e4;
       color: #212;
     }
+    .reject-btn {
+    background-color: #f44336;
+  color: white;
+  margin-left: 8px;
+}
+
   }
 }
